unpackaged/main/default/objects/Advertising_Request_Portal__c/Advertising_Request_Portal__c.object-meta.xml
<CustomObject>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Advertiser Request Portal ||</description>
    <label>Request</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>