unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Actual_Amount_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_of_Time__c</fullName>
    <label>Actual Amount of Time</label>
    <type>TextArea</type>
</CustomField>