unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>HQ Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>