unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Advertiser_Website__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Website__c</fullName>
    <label>Advertiser Website</label>
    <type>Url</type>
</CustomField>