unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Advertising_Medium1__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Medium1__c</fullName>
    <label>Advertising Medium</label>
    <type>TextArea</type>
</CustomField>