unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Advertising_Medium2__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Medium2__c</fullName>
    <label>Advertising Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>