unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/AP_Audience_Details__c.field-meta.xml
<CustomField>
    <fullName>AP_Audience_Details__c</fullName>
    <label>AP Audience Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>