unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Approved_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rate2__c</fullName>
    <label>Approved Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>