unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Attendees_in_the_Scheduled_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Attendees_in_the_Scheduled_Meeting__c</fullName>
    <label>Attendees in the Scheduled Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client - regular contact</fullName>
            </value>
            <value>
                <fullName>Decision makers</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>eComm Team</fullName>
            </value>
            <value>
                <fullName>Ads/Marketing Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>