unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Billing_Category__c.field-meta.xml
<CustomField>
    <fullName>Billing_Category__c</fullName>
    <label>Billing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>