unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Billing_Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email_Address__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Account || CR - 00521804</description>
    <label>Billing Contact Email Address</label>
    <type>TextArea</type>
</CustomField>