unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Brand_or_Seller__c.field-meta.xml
<CustomField>
    <fullName>Brand_or_Seller__c</fullName>
    <label>Brand or Seller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>