unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Brand_Segment__c.field-meta.xml
<CustomField>
    <fullName>Brand_Segment__c</fullName>
    <label>Brand Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Complementary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>