unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Brand_Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Seller_Name__c</fullName>
    <inlineHelpText>If different from the Advertiser Name, please list all brands that are associated with this Advertiser/Requester. These will all be reported cumulative. For individual brand requests, please submit individual requests.</inlineHelpText>
    <label>Brand Seller Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>