unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Brand_Strategist__c.field-meta.xml
<CustomField>
    <fullName>Brand_Strategist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Strategist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>