unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Brand_Strategy_or_Insights__c.field-meta.xml
<CustomField>
    <fullName>Brand_Strategy_or_Insights__c</fullName>
    <inlineHelpText>If Brand Strategy is selected, both Insights AND Brand Strategy will be involved. If only Insights selected, Brand Strategy will not be involved</inlineHelpText>
    <label>Brand Strategy or Insights?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Strategy</fullName>
            </value>
            <value>
                <fullName>Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>