unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>Verticals</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>