unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Business_Justification_MG__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification_MG__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Business Justification || CR - 00405201</description>
    <label>Business Justification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Underdelivery</fullName>
            </value>
            <value>
                <fullName>Poor Performance</fullName>
            </value>
            <value>
                <fullName>Implementation Error</fullName>
            </value>
            <value>
                <fullName>Tracking Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>