unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Campaign_Dates__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Dates__c</fullName>
    <inlineHelpText>What are the overall dates you are looking at?</inlineHelpText>
    <label>Campaign Dates</label>
    <type>TextArea</type>
</CustomField>