unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Campaign_Goal_KPI__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Goal_KPI__c</fullName>
    <label>Campaign Goal KPI</label>
    <type>TextArea</type>
</CustomField>