unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <inlineHelpText>Looking for Callisto (HALO) and/or GAM (DFP) IDs</inlineHelpText>
    <label>Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>