unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objective__c</fullName>
    <label>Campaign Objective</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Visits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>