unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Campaign_Size__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Size__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Campaign Size || CR - 00405201</description>
    <label>Campaign Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $250,000</fullName>
            </value>
            <value>
                <fullName>$250,000 - $500,000</fullName>
            </value>
            <value>
                <fullName>$500,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>