unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <label>Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>