unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Client_Agrees_to_Pay_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Client_Agrees_to_Pay_in_USD__c</fullName>
    <label>Client Agrees to Pay in USD?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>