unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Client_Agrees_to_USD_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Client_Agrees_to_USD_Invoice__c</fullName>
    <label>Client Agrees to USD Invoice?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>