unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Client_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Client_Meeting__c</fullName>
    <label>Client Meeting</label>
    <type>Date</type>
</CustomField>