unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Client_Request_this_Segment__c.field-meta.xml
<CustomField>
    <fullName>Client_Request_this_Segment__c</fullName>
    <label>Client Request this Segment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>