unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Cost_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Study__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Cost of Study || CR - 00405201</description>
    <label>Cost of Study</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>