unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/CPM_Cost_for_Vendor_If_Known__c.field-meta.xml
<CustomField>
    <fullName>CPM_Cost_for_Vendor_If_Known__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: CPM Cost for Vendor (If Known) || CR - 00405201</description>
    <label>CPM Cost for Vendor (If Known)?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>