unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Critical__c.field-meta.xml
<CustomField>
    <fullName>Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical?</label>
    <type>Checkbox</type>
</CustomField>