unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/CSI_Input_Status_Questions_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>CSI_Input_Status_Questions_Follow_Up__c</fullName>
    <label>CSI Input Status Questions/Follow Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>