unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/CSI_Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>CSI_Target_Completion_Date__c</fullName>
    <label>CSI Target Completion Date</label>
    <type>Date</type>
</CustomField>