unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/CSI_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>CSI_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSI Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>