unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Current_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Current Sales Rep || CR - 00405201</description>
    <label>Current Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advertising_Request_Portal</relationshipName>
    <type>Lookup</type>
</CustomField>