unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Currently_any_client_issues_objections__c.field-meta.xml
<CustomField>
    <fullName>Currently_any_client_issues_objections__c</fullName>
    <inlineHelpText>Is there anything we should be aware of when putting together the data? Was there past performance issues? Does the client love certain aspects we should include?</inlineHelpText>
    <label>Currently any client issues/objections?</label>
    <type>TextArea</type>
</CustomField>