unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Customer_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_1__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1P</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>1P and 3P</fullName>
                <isActive>false</isActive>
                <label>1P and 3P</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>