unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Date_sent_to_Offshore__c.field-meta.xml
<CustomField>
    <fullName>Date_sent_to_Offshore__c</fullName>
    <label>Date sent to Offshore</label>
    <type>Date</type>
</CustomField>