unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Deliverable_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Completion_Date__c</fullName>
    <label>Brand Strategy Deck Completion Date</label>
    <type>Date</type>
</CustomField>