unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Does_Campaign_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Does_Campaign_Go_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Campaign Go Live?</label>
    <type>Checkbox</type>
</CustomField>