unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Domo__c.field-meta.xml
<CustomField>
    <fullName>Domo__c</fullName>
    <label>Domo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ad Ops Reporting – Direct Data</fullName>
                <label>Ad Ops – Direct Data</label>
            </value>
            <value>
                <fullName>Ad Ops Reporting – Ad Unit Level Performance</fullName>
                <label>Ad Ops – Ad Unit Level Performance</label>
            </value>
            <value>
                <fullName>All Adobe Segment Population</fullName>
            </value>
            <value>
                <fullName>DFP Campaign Cross Shopping</fullName>
            </value>
            <value>
                <fullName>DFP Campaign Demographics</fullName>
            </value>
            <value>
                <fullName>DFP Campaign Segments Overlaps</fullName>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Overall Trends</fullName>
                <label>3P -&gt; Overall Trends</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Daily Trends Performance</fullName>
                <label>3P -&gt; Daily Trends Performance</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Advertiser Detailed Performance</fullName>
                <label>3P -&gt; Advertiser Detailed Performance</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Ad Unit Detailed Performance</fullName>
                <label>3P -&gt; Ad Unit Detailed Performance</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Buyer Detailed Performance</fullName>
                <label>3P -&gt; Buyer Detailed Performance</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; DSP Detailed Performance</fullName>
                <label>3P -&gt; DSP Detailed Performance</label>
            </value>
            <value>
                <fullName>3P US SSP Performance -&gt; Revenue Cross Tab Peformacne</fullName>
                <label>3P -&gt; Revenue Cross Tab Peformance</label>
            </value>
            <value>
                <fullName>1PD Campaign Performance Reporting</fullName>
            </value>
            <value>
                <fullName>eBay Advanced Audience Insights Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>