unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Dually_Signed__c.field-meta.xml
<CustomField>
    <fullName>Dually_Signed__c</fullName>
    <formula>Opportunity__r.IO__r.Dually_Signed_IO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dually Signed</label>
    <type>Checkbox</type>
</CustomField>