unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>today() +
CASE(
MOD(today() - DATE( 1900, 1, 7 ), 7),
0,5,
6,6,
14)</defaultValue>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Date || CR - 00492715</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>