unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/eAAT_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>eAAT_Segment_Name__c</fullName>
    <label>eAAT Segment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>