unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/eBAY_Seller_ID_s_if_eBay_Seller2__c.field-meta.xml
<CustomField>
    <fullName>eBAY_Seller_ID_s_if_eBay_Seller2__c</fullName>
    <label>eBAY Seller ID(s) if eBay Seller</label>
    <type>TextArea</type>
</CustomField>