unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/eBAY_Seller_ID_s_if_eBay_Seller__c.field-meta.xml
<CustomField>
    <fullName>eBAY_Seller_ID_s_if_eBay_Seller__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: eBay Seller ID(s) if eBay Seller || CR - 00405201</description>
    <label>Unused</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>