unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Estimated_Amount_of_Time_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount_of_Time_for_Request__c</fullName>
    <label>Estimated Amount of Time for Request</label>
    <type>TextArea</type>
</CustomField>