unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>NTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Estimated Completion Date || CR - 00492715</description>
    <inlineHelpText>Estimated delivery date for insights</inlineHelpText>
    <label>Insights Estimated Completion Date</label>
    <type>Date</type>
</CustomField>