unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Estimated Start Date || CR - 00405201</description>
    <label>Estimated Start Date</label>
    <type>Date</type>
</CustomField>