unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Existing_or_New_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_or_New_Client__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Existing or New Client|| CR - 00405201</description>
    <label>Existing or New Client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>