unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Existing_Rate_Rate_Card_Rate__c.field-meta.xml
<CustomField>
    <fullName>Existing_Rate_Rate_Card_Rate__c</fullName>
    <label>Existing Rate/Rate Card Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>