unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Expected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion_Date__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Expected Completion Date || CR - 00492715</description>
    <inlineHelpText>Offshore Expected Data Completion Data based on Bandwidth</inlineHelpText>
    <label>Expected Offshore Completion Date</label>
    <type>Date</type>
</CustomField>