unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Extended_Value__c.field-meta.xml
<CustomField>
    <fullName>Extended_Value__c</fullName>
    <label>Extended Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>