unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Goal_KPI_Value__c.field-meta.xml
<CustomField>
    <fullName>Goal_KPI_Value__c</fullName>
    <label>Goal KPI Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>