unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/How_will_Data_be_Presented__c.field-meta.xml
<CustomField>
    <fullName>How_will_Data_be_Presented__c</fullName>
    <label>How will Data be Presented?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Via phone</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Over Phone with CSI on Call</fullName>
                <label>Over phone with CSI</label>
            </value>
            <value>
                <fullName>In Person with CSI</fullName>
            </value>
            <value>
                <fullName>In Person with CSI Present</fullName>
                <isActive>false</isActive>
                <label>In Person with CSI Present</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>