unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/How_will_the_final_deliverable_be_used__c.field-meta.xml
<CustomField>
    <fullName>How_will_the_final_deliverable_be_used__c</fullName>
    <label>How will the final deliverable be used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent via email as attachment</fullName>
            </value>
            <value>
                <fullName>Email with key stats in email body only</fullName>
            </value>
            <value>
                <fullName>Presented via Zoom/phone</fullName>
            </value>
            <value>
                <fullName>In person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>